--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>WebStudio</title>
 </head>
 <body>
+    <!--
     <header class="header">
         <div class="container is-flex">
             <nav class="page-nav">
@@ -40,13 +41,16 @@
             </address>
         </div>
     </header>
+    -->
     <main>
+        <!--
         <section class="section-header-one">
             <div class="container">
                 <h1 class="header-one">Effective Solutions for Your Business</h1>
                 <button type="button" class="button">Order Service</button>
             </div>
         </section>
+        -->
         <section class="section-two-advantages">
             <div class="container">
                 <h2 class="visually-hidden">Advantages</h2>
@@ -57,8 +61,8 @@
                                 <use href="./images/icons.svg#icon-strategy"></use>
                             </svg>
                         </div>
-                        <h3 class="header-three">Strategy</h3>
-                        <p class="paragraph">
+                        <h3 class="header-three-adv">Strategy</h3>
+                        <p class="paragraph-adv">
                             Our goal is to identify the business problem to walk away with the perfect and creative solution.
                         </p>
                     </li>
@@ -68,8 +72,8 @@
                                 <use href="./images/icons.svg#icon-punctuality"></use>
                             </svg>
                         </div>
-                        <h3 class="header-three">Punctuality</h3>
-                        <p class="paragraph">
+                        <h3 class="header-three-adv">Punctuality</h3>
+                        <p class="paragraph-adv">
                             Bring the key message to the brand's audience for the best price within the shortest possible time.
                         </p>
                     </li>
@@ -79,8 +83,8 @@
                                 <use href="./images/icons.svg#icon-diligence"></use>
                             </svg>
                         </div>
-                        <h3 class="header-three">Diligence</h3>
-                        <p class="paragraph">
+                        <h3 class="header-three-adv">Diligence</h3>
+                        <p class="paragraph-adv">
                             Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
                         </p>
                     </li>
@@ -90,8 +94,8 @@
                                 <use href="./images/icons.svg#icon-technologies"></use>
                             </svg>
                         </div>
-                        <h3 class="header-three">Technologies</h3>
-                        <p class="paragraph">
+                        <h3 class="header-three-adv">Technologies</h3>
+                        <p class="paragraph-adv">
                             Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
                         </p>
                     </li>
@@ -333,6 +337,7 @@
             </div>
         </section>
     </main>
+    <!--
     <footer class="page-footer">
         <div class="container-footer">
             <div class="footer-logo-par">
@@ -390,6 +395,7 @@
             </div>
         </div>
     </footer>
+    -->
     <!--
     <div class="backdrop">
         <div class="modal">
