HW6 sect2+3+4+footer

--- a/index.html
+++ b/index.html
@@ -42,15 +42,16 @@
         </div>
     </header>
     -->
+    
     <main>
-        <!--
         <section class="section-header-one">
             <div class="container">
                 <h1 class="header-one">Effective Solutions for Your Business</h1>
                 <button type="button" class="button">Order Service</button>
             </div>
         </section>
-        -->
+        
+        <!--
         <section class="section-two-advantages">
             <div class="container">
                 <h2 class="visually-hidden">Advantages</h2>
@@ -337,7 +338,6 @@
             </div>
         </section>
     </main>
-    <!--
     <footer class="page-footer">
         <div class="container-footer">
             <div class="footer-logo-par">
@@ -346,7 +346,7 @@
                     Increase the flow of customers and sales for your business with digital marketing & growth solutions.
                 </p>
             </div>
-            <div>
+            <div class="div-footer-mob">
                 <p class="footer-title-soc-m">Social media</p>
                 <ul class="social-media-four-icons-footer">
                     <li class="li-soc-m-footer">
@@ -379,9 +379,9 @@
                     </li>
                 </ul>
             </div>
-            <div class="div-subscribe">
+            <div class="div-subscribe div-footer-mob">
                 <p class="footer-title-soc-m">Subscribe</p>
-                <form class="form-footer">
+                <form class="form-footer div-footer-mob">
                     <label class="form-label-footer">
                         <input type="email" name="email-footer" placeholder="E-mail" class="input-footer">
                     </label>
