HW6 header+1+2+3+4+footer

--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
     <title>WebStudio</title>
 </head>
 <body>
-    <!--
     <header class="header">
-        <div class="container is-flex">
+        <div class="is-flex">
             <nav class="page-nav">
                 <a href="./index.html" class="link-logo-nav">Web<span class="logo-studio">Studio</span></a>
                 <ul class="ul-nav">
@@ -30,7 +29,7 @@
                 </ul>
             </nav>
             <address class="address">
-                <ul class="ul-nav">
+                <ul class="ul-nav-address">
                     <li>
                         <a href="mailto:info@devstudio.com" class="link-address">info@devstudio.com</a>
                     </li>
@@ -39,10 +38,13 @@
                     </li>
                 </ul>
             </address>
+            <button type="button" class="menu-open-btn">
+                <svg class="menu-icon">
+                    <use href="./images/icons.svg#icon-menu" width="24" height="24"></use>
+                </svg>
+            </button>
         </div>
     </header>
-    -->
-    
     <main>
         <section class="section-header-one">
             <div class="container">
