--- a/index.html
+++ b/index.html
@@ -44,6 +44,64 @@
                 </svg>
             </button>
         </div>
+        <div class="mob-menu-div">
+            <button type="button" class="menu-close-btn">
+                <svg class="modal-close-icon" width="8" height="8">
+                    <use href="./images/icons.svg#icon-close"></use>
+                </svg>
+            </button>
+            <nav class="menu-nav is-open">
+                <ul class="menu-ul-nav">
+                    <li>
+                        <a href="./index.html" class="menu-nav-link-one">Studio</a>
+                    </li>
+                    <li>
+                        <a href="" class="menu-nav-link">Portfolio</a>
+                    </li>
+                    <li>
+                        <a href="" class="menu-nav-link">Contacts</a>
+                    </li>
+                </ul>
+            </nav>
+            <ul class="menu-ul-nav-address">
+                <li>
+                    <a href="mailto:info@devstudio.com" class="menu-link-address-one">info@devstudio.com</a>
+                </li>
+                <li>
+                    <a href="tel:+110001111111" class="menu-link-address">+11 (000) 111-11-11</a>
+                </li>
+            </ul>
+            <ul class="menu-social-media-four-icons">
+                <li class="menu-li-social-media-link">
+                    <a href="https://www.instagram.com/" target="_blank" class="social-media-link">
+                        <svg width="16" height="16" class="soc-med-link">
+                            <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="menu-li-social-media-link">
+                    <a href="https://www.twitter.com/" target="_blank" class="social-media-link">
+                        <svg width="16" height="16" class="soc-med-link">
+                            <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="menu-li-social-media-link">
+                    <a href="https://www.facebook.com/" target="_blank" class="social-media-link">
+                        <svg width="16" height="16" class="soc-med-link">
+                            <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="menu-li-social-media-link">
+                    <a href="https://www.linkedin.com/" target="_blank" class="social-media-link">
+                        <svg width="16" height="16" class="soc-med-link">
+                            <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
+        </div>
     </header>
     <main>
         <section class="section-header-one">
@@ -395,7 +453,7 @@
             </div>
         </div>
     </footer>
-    <div class="backdrop">
+    <div class="backdrop is-open">
         <div class="modal">
             <button type="button" class="modal-close-btn">
                 <svg class="modal-close-icon" width="8" height="8">
@@ -451,7 +509,6 @@
                 </div>
                 <button type="submit" class="send-button">Send</button>    
             </form>
-            
         </div>
     </div>
 </body>
