--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                 </ul>
             </address>
             <button type="button" class="menu-open-btn">
-                <svg class="menu-icon">
-                    <use href="./images/icons.svg#icon-menu" width="24" height="24"></use>
+                <svg class="menu-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-menu"></use>
                 </svg>
             </button>
         </div>
