--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
+    <script type="module" src="./main.js"></script>
 </head>
 <body>
     <header class="header">
@@ -38,19 +39,19 @@
                     </li>
                 </ul>
             </address>
-            <button type="button" class="menu-open-btn">
+            <button type="button" class="menu-open-btn" id="menu-open-btn">
                 <svg class="menu-icon" width="24" height="24">
                     <use href="./images/icons.svg#icon-menu"></use>
                 </svg>
             </button>
         </div>
-        <div class="mob-menu-div">
-            <button type="button" class="menu-close-btn">
+        <div class="mob-menu-div" id="mob-menu-div">
+            <button type="button" class="menu-close-btn" id="menu-close-btn">
                 <svg class="modal-close-icon" width="8" height="8">
                     <use href="./images/icons.svg#icon-close"></use>
                 </svg>
             </button>
-            <nav class="menu-nav is-open">
+            <nav class="menu-nav">
                 <ul class="menu-ul-nav">
                     <li>
                         <a href="./index.html" class="menu-nav-link-one">Studio</a>
