added links to nav

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                         <a href="./index.html" class="nav-link-one">Studio</a>
                     </li>
                     <li>
-                        <a href="" class="nav-link">Portfolio</a>
+                        <a href="#portfolio" class="nav-link">Portfolio</a>
                     </li>
                     <li>
-                        <a href="" class="nav-link">Contacts</a>
+                        <a href="#contacts" class="nav-link">Contacts</a>
                     </li>
                 </ul>
             </nav>
@@ -317,7 +317,7 @@
                 </ul>
             </div>
         </section>
-        <section class="section-four-our-portfolio">
+        <section class="section-four-our-portfolio" id="portfolio">
             <div class="container">
                 <h2 class="section-title">Our Portfolio</h2>
                 <ul class="ul-ul-section-four">
@@ -397,7 +397,7 @@
             </div>
         </section>
     </main>
-    <footer class="page-footer">
+    <footer class="page-footer" id="contacts">
         <div class="container-footer">
             <div class="footer-logo-par">
                 <a href="./index.html" class="link-logo-footer">Web<span class="logo-studio-footer">Studio</span></a>
